kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/constraintchecker_tests/invalid/032_assigned_to_self_01.kmt
/* $Id:$ 
 * Creation : March 31, 2010
 * Licence  : EPL 
 * Copyright:
 * Authors  : 
 *            dvojtise
 */
@mainClass "root_package::Main"
@mainOperation "main"


package root_package;


require kermeta
class Main
{
	attribute a : kermeta::standard::String 
	operation main() : Void is do 	
		self.a := a  // should raise a warning
	end
	
}